# rs-af_packet

./: .bish-index  .bish.sqlite  AMAZON_Q_IMPLEMENTATION.md  CHANGELOG.md  CICD_RESOLUTION_REPORT.md  CI_PIPELINE_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PROJECT.txt  README.md  REVIEW_SUMMARY.md  SDK_INTEGRATION.md  SECURITY.md  WARP.md  comprehensive_audit.sh  deny.toml  final_search.sh  pf.py  readme.md  search_actions.sh  validate-build.sh
.github/: .bish.sqlite
.github/workflows/: auto-advance-ball.yml  auto-amazonq-review.yml  auto-copilot-code-cleanliness-review.yml  auto-copilot-functionality-docs-review.yml  auto-copilot-org-playwright-loop.yaml  auto-copilot-org-playwright-loopv2.yaml  auto-copilot-playwright-auto-test.yml  auto-copilot-test-review-playwright.yml  auto-gpt5-implementation.yml  auto-sec-scan.yml
docs/: AMAZON_Q_INTEGRATION.md  api  architecture  integration  performance  security
examples/: .bish.sqlite
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
scripts/: bench.sh  build.sh  clean.sh  container-build.sh  docs.sh  integration-test.sh  lint.sh  performance-analysis.sh  prod-build.sh  security-analysis.sh  security.sh  setup.sh  test.sh
src/: .bish.sqlite  lib.rs  rx.rs  socket.rs  tpacket3.rs  tx.rs
